--- a/views/rules.html
+++ b/views/rules.html
@@ -1,9 +1,9 @@
 <div class="container" ng-controller="RuleController">
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<h2>Rules</h2>
-			<h4>Rules for using this website.</h4>
-			<h6>By using this website (the "site"), you agree that you'll follow these rules, and understand them.</h6>
+			<h2 ng-bind="lang.Rules"></h2>
+			<h4 ng-bind="lang.Rules_desc"></h4>
+			<h6 ng-bind="lang.Rules_desc_small"></h6>
 			<hr/>
 		</div>
 		<div class="col-md-12">
