--- a/views/404.html
+++ b/views/404.html
@@ -1,10 +1,10 @@
 <div class="container">
 	<div class="row">
 		<div class="panel panel-default">
-			<div class="panel-heading">Oh snap! 404 not found!</div>
+			<div class="panel-heading" ng-bind="lang.Not_found_title"></div>
 			<div class="panel-body text-center">
-				<h2>REQUESTED URL NOT FOUND.</h2><br/>
-				<h4>You can go back to index <a href="#/">here.</a></h4>
+				<h2 ng-bind="lang.Not_found_desc"></h2><br/>
+				<h4 ng-bind="lang.Not_found_desc_small"></h4>
 			</div>
 		</div>
 	</div>
