--- a/views/index.html
+++ b/views/index.html
@@ -1,8 +1,8 @@
 <div class="container" ng-controller="BoardListController">
 	<div class="row">
 		<div class="col-md-12 text-center">
-			<h2>Boards</h2>
-			<h4>Here is some boards you can start with.</h4>
+			<h2 ng-bind="lang.Boards"></h2>
+			<h4 ng-bind="lang.Boards_desc"></h4>
 			<hr/>
 		</div>
 		<div class="col-md-6">
@@ -10,7 +10,7 @@
 				<a ng-repeat="board in firstList" href="#/board/{{board.prefix}}" class="list-group-item">
 				<span class="label pull-right" 
 				ng-class="board.tag === 'NSFW' ? 'label-danger' : 'label-success'" 
-				title="{{board.tag === 'NSFW' ? 'Not Safe For Work' : 'Safe For Work'}}">{{board.tag}}</span>
+				title="{{board.tag === 'NSFW' ? lang.NSFW : lang.SFW}}">{{board.tag}}</span>
 				{{board.name}}
 				</a>
 			</div>
@@ -20,7 +20,7 @@
 				<a ng-repeat="board in secondList" href="#/board/{{board.prefix}}" class="list-group-item">
 				<span class="label pull-right" 
 				ng-class="board.tag === 'NSFW' ? 'label-danger' : 'label-success'" 
-				title="{{board.tag === 'NSFW' ? 'Not Safe For Work' : 'Safe For Work'}}">{{board.tag}}</span>
+				title="{{board.tag === 'NSFW' ? lang.NSFW : lang.SFW}}">{{board.tag}}</span>
 				{{board.name}}
 				</a>
 			</div>
