--- a/assets/css/boardlite.dark.css
+++ b/assets/css/boardlite.dark.css
@@ -25,6 +25,16 @@ input[type="text"] {
 	border-color: black !important;
 }
 
+input[type="password"] {
+	background-color: #262627 !important;
+	border-color: black !important;
+}
+
+select {
+	background-color: #262627 !important;
+	border-color: black !important;
+}
+
 textarea {
 	background-color: #262627 !important;
 	border-color: black !important;
@@ -55,6 +65,10 @@ pre {
 	color: #FDFDFD !important;
 	background-color: #57616b !important;
 	border-color: #57616b !important;
+}
+
+tr:hover {
+	background-color: #57616b !important;
 }
 
 /**
