--- a/assets/css/boardlite.css
+++ b/assets/css/boardlite.css
@@ -1,9 +1,9 @@
 .hover-text {
     color: black;
-    background-color: black;
+    background-color: black
 }
 
 .hover-text:hover {
     background-color: black !important;
-    color: #FDFDFD !important;
+    color: #FDFDFD !important
 }
