--- a/views/thread.html
+++ b/views/thread.html
@@ -1,7 +1,8 @@
 <div class="container-fluid" ng-controller="ThreadController">
 	<div class="row">
-		<div class="col-md-12">
-			<div class="panel panel-default">
+		<div class="col-md-10 col-md-offset-1">
+
+			<div class="panel panel-default" ng-hide="startPost.locked === '1'">
 				<div class="panel-heading" ng-bind="lang.Add_reply"></div>
 				<div class="panel-body">
 					<form>
@@ -19,29 +20,32 @@
 					</form>
 				</div>
 			</div>
+
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-12">
+		<div class="col-md-10 col-md-offset-1">
+
 			<div class="panel panel-default">
 				<div class="panel-heading" id="msg_{{startPost.msg_id}}">
 					<a href="javascript:void(0)" ng-bind-html="startPost.title"></a>
 					<p class="pull-right" ng-show="isAdmin">
 						<button class="btn btn-danger btn-xs">{{lang.IP}}: {{startPost.ip}}</button>
+						<button class="btn btn-danger btn-xs" ng-click="setThreadLockState()" ng-bind="startPost.locked === '1' ? 'Unlock thread' : 'Lock thread'"></button>
 						<button class="btn btn-danger btn-xs" admin-delete-thread="{{startPost.msg_id}}" ng-bind="lang.Delete_thread"></button>
 					</p>
-					<h6>{{lang.Id}}: <a ng-click="answer(startPost.msg_id)" style="cursor:pointer">{{ startPost.msg_id }}</a> &middot; {{lang.Posted}}: {{ startPost.posted }} &middot; {{lang.Anonymous}}</h6>
+					<h6><text style="color:red">{{startPost.locked === '1' ? '[LOCKED] &middot; ' : ''}}</text>{{lang.Id}}: <a ng-click="answer(startPost.msg_id)" style="cursor:pointer">{{ startPost.msg_id }}</a> &middot; {{lang.Posted}}: {{ startPost.posted }} &middot; {{lang.Anonymous}}</h6>
 				</div>
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-md-3" ng-hide="startPost.fileType == 'no_file'">
+						<div class="col-md-5" ng-hide="startPost.fileType == 'no_file'" ng-class="startPost.zoom !== true ? 'col-md-2' : ''" ng-click="startPostZoom()">
 							<div class="embed-responsive embed-responsive-16by9" ng-if="startPost.fileType == 'video'">
 								<video controls>
 									<source ng-src="{{startPost.img_url}}" type="video/mp4">
 								</video>
 							</div>
 							<div class="img-responsive" ng-if="startPost.fileType == 'image'">
-								<img ng-src="{{((startPost.img_url !== 'undefined') ? startPost.img_url : 'assets/img/empty.png')}}" class="img-responsive">
+								<img ng-src="{{startPost.img_url !== 'undefined' ? startPost.img_url : 'assets/img/empty.png'}}" class="img-responsive">
 							</div>
 						</div>
 						<div ng-class="startPost.fileType.type === 'no_file' ? 'col-md-12' : 'col-md-9'">
@@ -50,10 +54,12 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 	</div>
-	<div class="row" ng-show="replys.length > 0">
-		<div class="col-md-12" ng-repeat="reply in replys">
+	<div class="row" ng-show="replies.length > 0">
+		<div class="col-md-10 col-md-offset-1" ng-repeat="reply in replies">
+
 			<div class="panel panel-default" id="msg_{{reply.msg_id}}">
 				<div class="panel-heading">
 					<p class="pull-right" ng-show="isAdmin">
@@ -64,14 +70,14 @@
 				</div>
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-md-3" ng-hide="reply.fileType == 'no_file'">
+						<div class="col-md-5" ng-hide="reply.fileType == 'no_file'" ng-class="reply.zoom !== true ? 'col-md-2' : ''" ng-click="replyZoom(reply)">
 							<div class="embed-responsive embed-responsive-16by9" ng-if="reply.fileType == 'video'">
 								<video controls>
 									<source ng-src="{{reply.img_url}}" type="video/mp4">
 								</video>
 							</div>
 							<div class="img-responsive" ng-if="reply.fileType == 'image'">
-								<img ng-src="{{((reply.img_url !== 'undefined') ? reply.img_url : 'assets/img/empty.png')}}" class="img-responsive">
+								<img ng-src="{{reply.img_url !== 'undefined' ? reply.img_url : 'assets/img/empty.png'}}" class="img-responsive">
 							</div>
 						</div>
 						<div ng-class="reply.fileType.type === 'no_file' ? 'col-md-12' : 'col-md-9'">
@@ -80,6 +86,7 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 	</div>
 </div>
