Added word wrapping for messages

--- a/views/board.html
+++ b/views/board.html
@@ -55,7 +55,7 @@
 							</div>
 						</div>
 						<div class="col-md-9">
-							<p ng-bind-html="thread.content | nl2br | bbcode"></p>
+							<p class="message" ng-bind-html="thread.content | nl2br | bbcode"></p>
 						</div>
 					</div>
 				</div>
