Fixed thread deleting redirect

--- a/views/board.html
+++ b/views/board.html
@@ -38,7 +38,7 @@
 					<a href="#/thread/{{thread.msg_id}}/" ng-bind-html="thread.title | nl2br | bbcode"></a>
 					<p class="pull-right" ng-show="isAdmin">
 						<button class="btn btn-danger btn-xs">{{lang.IP}}: {{thread.ip}}</button>
-						<button class="btn btn-danger btn-xs" admin-delete-thread="{{thread.msg_id}}">{{lang.Delete_thread}}</button>
+						<button class="btn btn-danger btn-xs" admin-delete-thread="{{thread.msg_id}},{{thread.prefix}}">{{lang.Delete_thread}}</button>
 					</p>
 					<h6><text style="color:red">{{thread.locked === '1' ? '[' + lang.Locked + ']' + ' &middot; ' : ''}}</text> {{lang.Id}}: {{thread.msg_id}} &middot; {{lang.Posted}}: {{ thread.posted }} &middot; {{lang.Anonymous}}</h6>
 				</div>
