--- a/views/board.html
+++ b/views/board.html
@@ -67,6 +67,7 @@
 
 		</div>
 	</div>
+
 	<div class="row" ng-hide="threads.length > 0">
 		<div class="col-md-12">
 
@@ -81,4 +82,15 @@
 
 		</div>
 	</div>
+
+	<div class="row" ng-show="threads.length > 0">
+		<div class="col-md-12">
+			<ul class="pagination" ng-repeat="t in threadCache track by $index">
+				<li ng-class="paginationIndex == $index ? 'active' : ''">
+					<a href="javascript:void(0)" ng-click="updatePaginationIndex($index)">{{ $index }}</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
 </div>
